...
        android:elevation="10dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/cv_poster"
        app:layout_constraintTop_toTopOf="@id/cv_poster">

        <TextView
            android:id="@+id/tv_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/cv_poster"
            app:layout_constraintStart_toStartOf="@id/cv_poster"
            app:layout_constraintTop_toBottomOf="@id/cv_poster"
            tools:text="99%" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_tag_line"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:maxLines="2"
        android:textAlignment="center"
...
        app:layout_constraintEnd_toEndOf="@id/cv_poster"
        app:layout_constraintStart_toStartOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/cv_poster"
        tools:text="Tag Line" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toTopOf="@+id/cv_poster"
        tools:text="title" />

    <TextView
        android:id="@+id/tv_date"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:text="Date" />

    <TextView
        android:id="@+id/tv_genre"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:textColor="@color/colorWhite"
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

    <TextView
        android:id="@+id/tv_status"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/text_status"
...
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_status" />

    <TextView
        android:id="@+id/tv_number_of_episodes"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/text_number_of_episodes"
...
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_episodes" />

    <TextView
        android:id="@+id/tv_number_of_seasons"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/text_number_of_seasons"
...
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_seasons" />

    <TextView
        android:id="@+id/tv_budget"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/text_budget"
...
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_budget" />

    <TextView
        android:id="@+id/tv_revenue"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/text_revenue"
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_backdrop" />

    <TextView
        android:id="@+id/tv_overview"
        style="@style/Theme.MovieCatalogueSpacing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="@color/colorText"
        android:textSize="14sp"
...
