...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tv_show"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="80dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/items_tv_show" />
    </androidx.core.widget.NestedScrollView>
...
        android:layout_height="100dp"
        android:layout_gravity="bottom"
        android:background="@drawable/background_gradient_bottom_white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/btn_bookmark_tv_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_item_favorite"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
...
